<resources>
    <string name="action_add">Add</string>
    <string name="action_archive">Archive</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_choose">Choose</string>
    <string name="action_clear">Clear</string>
    <string name="action_default">Default</string>
    <string name="action_donate">Donate</string>
    <string name="action_done">Done</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_move">Move</string>
    <string name="action_ok">OK</string>
    <string name="action_remove">Remove</string>
    <string name="action_rename">Rename</string>
    <string name="action_reset">Reset</string>
    <string name="action_reset_colorscheme">Reset</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="add_comment">Add comment</string>
    <string name="add_time">Add time</string>
    <string name="add_time_hint" translatable="false">1:23.45</string>
    <string name="added_comment">Comment added</string>
    <string name="advanced_pref_summary">Changing these settings may cause some clipping issues</string>
    <string-array name="array_penalties" translatable="false">
        <item>@string/no_penalty</item>
        <item>+2</item>
        <item>DNF</item>
    </string-array>
    <string name="backCancelEnabledSummary">Pressing the back button during a solve will cancel it</string>
    <string name="backCancelEnabledTitle">Back cancels solve</string>
    <string name="backgroundEnabledSummary">Tint the timer background with the theme color</string>
    <string name="backgroundEnabledTitle">Colored background</string>
    <string name="bestSolveEnabledSummary">Alert when you get a personal best</string>
    <string name="bestSolveEnabledTitle">Best time alert</string>
    <string name="averageRecordsEnabledSummary">Alert and highlight stats when you get a new best average</string>
    <string name="averageRecordsEnabledTitle">Best average alert</string>
    <string name="buttonsEnabledSummary">Show the buttons that appear under the timer after a solve</string>
    <string name="buttonsEnabledTitle">Quick action buttons</string>
    <string name="choose_donation_amount">Choose an amount to donate</string>
    <string name="clearEnabledSummary">The \"Clear\" button is shown in the time list, and lets you remove all solves from the current session</string>
    <string name="clearEnabledTitle">Show \"Clear\" button</string>
    <string name="contact">Contact</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_content">Huge thanks to these people for contributing to the development of the app:%1$s</string>
    <string name="contributors_names" translatable="false">\n\n•AriNeto\n•damo\n•Combinacijusx\n•druidalek\n•freundTech\n•aswna\n•Doug Melton\n•hatoya</string>
    <string name="cube_222">2x2 Cube</string>
    <string name="cube_222_informal" translatable="false">2x2</string>
    <string name="cube_333">3x3 Cube</string>
    <string name="cube_333_informal" translatable="false">3x3</string>
    <string name="cube_444">4x4 Cube</string>
    <string name="cube_444_informal" translatable="false">4x4</string>
    <string name="cube_555">5x5 Cube</string>
    <string name="cube_555_informal" translatable="false">5x5</string>
    <string name="cube_666">6x6 Cube</string>
    <string name="cube_666_informal" translatable="false">6x6</string>
    <string name="cube_777">7x7 Cube</string>
    <string name="cube_777_informal" translatable="false">7x7</string>
    <string name="cube_clock">Clock</string>
    <string name="cube_mega">Megaminx</string>
    <string name="cube_pyra">Pyraminx</string>
    <string name="cube_skewb">Skewb</string>
    <string name="cube_sq1">Square-1</string>
    <string name="delete_dialog_cancel_button">Cancel</string>
    <string name="delete_dialog_confirmation_button">Remove</string>
    <string name="delete_dialog_confirmation_title">Remove solve?</string>
    <string name="dialog_export_import_export">Export…</string>
    <string name="dialog_export_import_import">Import…</string>
    <string name="dialog_revert_content_confirmation">Reset the algorithms for this case back to the default?</string>
    <string name="dialog_revert_title_confirmation">Reset algorithms</string>
    <string name="dialog_set_progress">Set progress</string>
    <string name="donation_tier1" translatable="false">1 USD</string>
    <string name="donation_tier2" translatable="false">2 USD</string>
    <string name="donation_tier3" translatable="false">3 USD</string>
    <string name="donation_tier4" translatable="false">5 USD</string>
    <string name="donation_tier5" translatable="false">10 USD</string>
    <string name="drawer_about">About and feedback</string>
    <string name="drawer_close" translatable="false">Menu closed</string>
    <string name="drawer_open" translatable="false">Menu opened</string>
    <string name="drawer_title_changeColorScheme">Color scheme</string>
    <string name="drawer_title_changeTheme">App theme</string>
    <string name="drawer_title_export_import">Export/Import</string>
    <string name="drawer_title_oll" translatable="false">OLL</string>
    <string name="drawer_title_other">Other</string>
    <string name="drawer_title_pll" translatable="false">PLL</string>
    <string name="drawer_title_reference">Reference</string>
    <string name="drawer_title_timer">Timer</string>
    <string name="edit_algorithm">Edit algorithms</string>
    <string name="edit_comment">Edit comment</string>
    <string name="enable_advanced">Enable advanced settings</string>
    <string name="enter_new_name_dialog">Enter new name</string>
    <string name="enter_type_name">Enter category name</string>
    <string name="export_import_dialog_for_backup">For backup</string>
    <string name="export_import_dialog_for_other_timers">For other timers</string>
    <string name="export_import_dialog_from_backup">From backup</string>
    <string name="export_import_dialog_from_txt_file">From .txt file</string>
    <string name="export_progress_complete">Successfully exported to:</string>
    <string name="export_progress_error">Unfortunately, an error occurred while exporting.\nCheck your permissions</string>
    <string name="export_progress_title">Exporting…</string>
    <string name="fab_add_time">Add time</string>
    <string name="fab_share_ao12">Ao12</string>
    <string name="fab_share_ao5">Ao5</string>
    <string name="fab_share_distribution">Distribution</string>
    <string name="fab_share_error">Could not share. Make sure you\'ve done enough solves in this session.</string>
    <string name="fab_share_histogram_solvecount">%1$s time distribution (%2$d solves)</string>
    <string name="fab_share_title">Share session…</string>
    <string name="file_selection_error_content">Make sure you are selecting a valid %1$s file</string>
    <string name="file_selection_error_title">Wrong file type</string>
    <string name="generating_scramble">Generating scramble…</string>
    <string name="graph_legend_all_times">Everything</string>
    <string name="graph_legend_avg_prefix">Ao</string>
    <string name="graph_legend_best_times">Best</string>
    <string name="graph_mean">Mean</string>
    <string name="hideTimeSummary">The timer will display your time when you finish</string>
    <string name="hideTimeText" translatable="false">…</string>
    <string name="hideTimeTitle">Hide time while solving</string>
    <string name="holdEnabledSummary">Hold the timer for 0.5 seconds to start</string>
    <string name="holdEnabledTitle">Hold to start</string>
    <string name="import_external_content_first">In the next step, select a .txt file that is in the following format, with one solve per line:\n\n<small>
            <tt>\"time\"; \"scramble\"; \"date\"\n\n<b>Example:</b>\n\"1:32.15\"; \"R U2\"; \"2016-03-16T08:16:42\"</tt>
        </small>
    </string>
    <string name="import_external_title">Importing from .txt</string>
    <string name="import_progress_content">Import finished with:</string>
    <string name="import_progress_content_errors">errors</string>
    <string name="import_progress_content_ignored_duplicates">ignored duplicates</string>
    <string name="import_progress_content_successful_imports">successful imports</string>
    <string name="import_progress_title">Importing solves…</string>
    <string name="inspectionEnabledTitle">Inspection</string>
    <string name="inspectionTimeSummary">Default duration: 15 seconds</string>
    <string name="inspectionTimeTitle">Inspection duration (seconds)</string>
    <string name="inspection_time">Inspection time</string>
    <string name="invalid_time">Invalid time</string>
    <string name="license">License</string>
    <string name="list_empty_state_message">Nothing here yet!\nTap the switch at the top of the screen to see your history.</string>
    <string name="list_empty_state_message_history">Nothing here yet!\nAll your old solves will be stored here.</string>
    <string name="list_options_item_from_history">Unarchive</string>
    <string name="list_options_item_history">Archive</string>
    <string name="list_options_item_share">Share</string>
    <string name="loading_hints">Loading hints…</string>
    <string name="millisecondsEnabledSummary">Shows decimals when timing a solve</string>
    <string name="millisecondsEnabledTitle">Show decimals</string>
    <string name="move_solves_to_history">Move solves to history?</string>
    <string name="move_solves_to_history_content">You\'ll be able to access them by tapping the history switch</string>
    <string name="name_category">Category</string>
    <string name="name_puzzle">Puzzle</string>
    <string name="no_penalty">No penalty</string>
    <string name="optimal_cross">Optimal cross on %1$s:</string>
    <string name="optimal_x_cross">Optimal extended cross on %1$s:</string>
    <string name="option_show_scramble_hints">Faces shown on hint</string>
    <string name="option_show_scramble_hints_summary">Select the faces you want to view hints for</string>
    <string name="pagerEnabledSummary">If this setting is disabled, you\'ll have to tap the tabs to switch between them.</string>
    <string name="pagerEnabledTitle">Allow swiping between tabs</string>
    <string name="panel_swipe_down_to_hide">Swipe down to hide</string>
    <string name="rate_app">Rate this app on Google Play</string>
    <string name="source">Source</string>
    <string name="testers">Testers</string>
    <string name="title_activity_about">About and feedback</string>
    <string name="translators">Translators</string>
    <string name="language_czech" translatable="false">Čeština</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_english_usa" translatable="false">English (US)</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_lithuanian" translatable="false">Lietuvių kalba</string>
    <string name="language_polish" translatable="false">Język polski</string>
    <string name="language_portuguese_br" translatable="false">Português (BR)</string>
    <string name="language_russian" translatable="false">Русский</string>
    <string name="language_spanish" translatable="false">Español</string>
    <string name="about_translate_title">Help translate Cubic Timer!</string>
    <string name="donation_message">Your donation helps me make Cubic Timer even better for everyone :)</string>
    <string name="list_sort_title">Sort by…</string>
    <string name="list_sort_time">Time</string>
    <string name="list_sort_date">Date</string>
    <string name="list_sort_ascending">Ascending</string>
    <string name="list_sort_descending">Descending</string>
</resources>